--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "eslint .",
-    "start": "next start"
+    "start": "next start",
+    "prisma:generate": "prisma generate",
+    "prisma:push": "prisma db push",
+    "prisma:studio": "prisma studio",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:seed": "node scripts/seed-auth.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
